Infrastructure/K8_scripts/mealAppNameSpace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  mealappapi
  annotations:
    name: mealAppApi
    creator: padre
