Infrastructure/K8_scripts/orderServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  labels:
    app: order-service
  namespace: mealappapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      name: order-service-pod
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service-container
        image: gerald22/meal_api_order:3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9601
---

apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: mealappapi
spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 9600
    targetPort: 9600
  type: ClusterIP
