Infrastructure/K8_scripts/productServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
  labels:
    app: product-service
  namespace: mealappapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      name: product-service-pod
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service-container
        image: gerald22/meal_api_product:3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9601
---

apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: mealappapi
spec:
  selector:
    app: product-service
  ports:
  - protocol: TCP
    port: 9601
    targetPort: 9601
  type: ClusterIP
